fix(bullet): Fix spacing | PROFILE-798

--- a/core/ui-kit/src/modules/list/list-bullet.setup.scss
+++ b/core/ui-kit/src/modules/list/list-bullet.setup.scss
@@ -3,5 +3,5 @@
 
 $list-bullet-square-dimensions: rem(4px) !default;
 $list-bullet-spacing-left: $spacing-c !default;
-$list-bullet-square-padding-left: calc(#{$list-bullet-square-dimensions} + #{$spacing-c}) !default;
+$list-bullet-square-padding-left: calc(#{$list-bullet-square-dimensions} + #{$spacing-12}) !default;
 $list-bullet-square-position-top: rem(9px) !default;
